--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,9 @@
 ---
-
+import Layout from '../layouts/Layout.astro';
+import Button from '../components/Button.astro';
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<link rel="icon" href="/favicon.ico" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Layout>
+    <h1>Dit højskoleeventyr <br> starter her</h1>
+    <p>HØJSKOLENDK er en dansk højskole for unge i alderen <strong>18-26 år</strong>. <br>Vi brænder for oplevelser, fællesskabet og det gode eventyr.</p>
+</Layout>
