sticky header and path correction

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,39 +5,39 @@ import "../css/header.css";
 <header class="header_flex_3">
     <div class="header_flex_icons">
         <div class="some_icon">
-            <a href="https://www.tiktok.com/@hojskolendk"><img src="assets/tiktok.svg" alt="TikTok"></a>
+            <a href="https://www.tiktok.com/@hojskolendk"><img src="/hojskolendk/assets/tiktok.svg" alt="TikTok"></a>
         </div>
         <div class="some_icon">
-            <a href="https://www.instagram.com/hojskolendk"><img src="assets/instagram.svg" alt="Instagram"></a>
+            <a href="https://www.instagram.com/hojskolendk"><img src="/hojskolendk/assets/instagram.svg" alt="Instagram"></a>
         </div>
         <div class="some_icon">
-            <a href="https://www.youtube.com/@HojskolendkDk"><img src="assets/youtube.svg" alt="YouTube"></a>
+            <a href="https://www.youtube.com/@HojskolendkDk"><img src="/hojskolendk/assets/youtube.svg" alt="YouTube"></a>
         </div>
         <div class="some_icon">
-            <a href="https://www.facebook.com/hojskolendk"><img src="assets/facebook.svg" alt="Facebook"></a>
+            <a href="https://www.facebook.com/hojskolendk"><img src="/hojskolendk/assets/facebook.svg" alt="Facebook"></a>
         </div>
         
     </div>
 
     <div class="header_flex_3-2">
         <div class="header_icon-text">
-        <img src="assets/checkmarkicon2.svg" alt="Checkmark">
+        <img src="/hojskolendk/assets/checkmarkicon2.svg" alt="Checkmark">
         <span>4,8 /5 stjerner på Trustpilot</span>
         </div>
 
         <div class="header_icon-text">
-        <img src="assets/planeoutlineicon.svg" alt="Flyvemaskine outline">
+        <img src="/hojskolendk/assets/planeoutlineicon.svg" alt="Flyvemaskine outline">
         <span>Medlem af Rejsegarantifonden</span>
         </div>
 
          <div class="header_icon-text">
-        <img src="assets/safetyicon.svg" alt="Sikkerheds ikon">
+        <img src="/hojskolendk/assets/safetyicon.svg" alt="Sikkerheds ikon">
         <span>Rejser for unge siden 2010</span>
         </div>
     </div>
 
     <div class="header_icon-text">
-        <img src="assets/ballicon.svg" alt="Bold ikon">
+        <img src="/hojskolendk/assets/ballicon.svg" alt="Bold ikon">
         <span>Brug for hjælp?</span>
     </div>
 
