--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -5,7 +5,7 @@ import "../css/nav.css";
 
 <nav class="nav_flex">
 	
-		<a href="/"><img class="hojskolenlogo" src="assets/hojskolendklogo.svg" alt="Højskolendk logo"></a>
+		<a href="/"><img class="hojskolenlogo" src="/hojskolendk/assets/hojskolendklogo.svg" alt="Højskolendk logo"></a>
 			
 			
 
