--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -108,10 +108,16 @@
     font-size: 50px;
     margin-bottom: 16px;
     line-height: 100%;
+    font-family: var(--font-primary);
   }
 
   h3 {
     font-size: 32px;
+    font-family: var(--font-primary);
+  }
+
+  .right{
+font-family: var(--font-secondary);
   }
 
   .contact-buttons {
@@ -119,9 +125,11 @@
     gap: 12px;
     margin: 20px 0;
   }
+
   .left p{
     margin-top: 16px;
     line-height: 120%;
+    font-family: var(--font-secondary);
   }
   .nedre_p{
     margin-top: 20px;
