switched out semantic tags

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ import "../css/header.css";
 ---
 
 <header class="header_flex_3">
-    <div class="header_flex_icons">
+    <nav class="header_flex_icons">
         <div class="some_icon">
             <a href="https://www.tiktok.com/@hojskolendk"><img src="/hojskolendk/assets/tiktok.svg" alt="TikTok"></a>
         </div>
@@ -15,7 +15,7 @@ import "../css/header.css";
         </div>
         <div class="some_icon">
             <a href="https://www.facebook.com/hojskolendk"><img src="/hojskolendk/assets/facebook.svg" alt="Facebook"></a>
-        </div>
+        </nav>
         
     </div>
 
