--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -3,20 +3,20 @@ import Button from '../components/Button.astro';
 import "../css/nav.css";
 ---
 
-<nav class="nav_flex">
+<section class="nav_flex">
 	
 		<a href="/"><img class="hojskolenlogo" src="/hojskolendk/assets/hojskolendklogo.svg" alt="Højskolendk logo"></a>
 			
 			
 
-			<div class="nav_a">
+			<nav class="nav_a">
 			<a href="">Rejsekalender</a>
 			<a href="">Højskoleophold</a>
 			<a href="">Sommerhøjskole</a>
 			<a href="">Priser</a>
 			<a href="">Om os</a>
 			<a href="">Kontakt os</a>
-			</div>
+			</nav>
 
 			<div>
 			<Button title="Bestil ophold" variant="primary"/>
@@ -26,4 +26,4 @@ import "../css/nav.css";
 
 			
 
-		</nav>
+		</section>
