Changed Astro setup to the right one

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,8 +6,9 @@ import Picturegrid from '../components/Picturegrid.astro';
 ---
 
 <Layout>
-    <Hero/>
+    <Hero 
+    title="Dit højskoleeventyr starter her"
+    subtitle="HØJSKOLENDK er en dansk højskole for unge i alderen 18-26 år. Vi brænder for oplevelser, fællesskabet og det gode eventyr."/>
     <Picturegrid/>
-   
-    
+
 </Layout>
