--- a/src/components/Picturegrid.astro
+++ b/src/components/Picturegrid.astro
@@ -41,6 +41,7 @@
       margin-bottom: 24px;
       margin-top: 50px;
       font-family: var(--font-primary);
+      font-size: 2.2rem;
     }
     
    .ophold-længde {
@@ -111,7 +112,8 @@
     }
 
     .se-alle-rejser-cta {
-      margin-top: 24px;
+      font-family: var(--font-secondary);
+      font-weight: 600;
       padding: 12px 24px;
       background-color: #CE5501;
       color: white;
@@ -119,8 +121,9 @@
       border-radius: 4px;
       cursor: pointer;
       margin: 0 auto;
-        display: block;
-        margin-top: 70px;
+      display: block;
+      margin-top: 30px;
+      margin-bottom: 140px;
     }
 
     .se-alle-rejser-cta:hover {
@@ -143,6 +146,7 @@
       bottom: 12px;
       padding: 10px 12px;
       font-family: var(--font-primary);
+      font-size: 1.1rem;
       color: #000000;
       font-weight: 600;
       line-height: 1.2;
