--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -45,7 +45,6 @@ const {title, subtitle} = Astro.props;
 </article>
 
     <style>
-        
         article {
            background-color: grey;
            color: var(--color-text-primary);
@@ -70,17 +69,21 @@ const {title, subtitle} = Astro.props;
             font-family: var(--font-primary);
             font-size: 3.5rem;
             font-weight: 100;
-            margin-top: 75px;
+            padding-top: 75px;
+            width: 50%;
         }
         p {
             font-family: var(--font-secondary);
             margin: 10px 0px 20px 0px;
+            width: 33%;
         }
 
          @media (max-width: 640px) {
-            h1 {
+            h2 {
                 font-size: 2.1rem;
+                width: 100%;
             }
+            
             p {
                 font-size: 0.7rem;
             }
