changed width for hero

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -85,7 +85,8 @@ const {title, subtitle} = Astro.props;
             }
             
             p {
-                font-size: 0.7rem;
+                font-size: 0.8rem;
+                width: 75%;
             }
          }
 
