--- a/src/components/Picturegrid.astro
+++ b/src/components/Picturegrid.astro
@@ -4,31 +4,31 @@
   <div class="picture-grid">
     <a class="picture-card" href="/rejser/picture1" aria-label="Åbn billede 1">
         <span class="ophold-længde">90 dage</span>
-      <img src={`${import.meta.env.BASE_URL}images/torigate.webp`} />
+      <img src={`${import.meta.env.BASE_URL}/images/torigate.webp`} />
       <span class="picture-card__title">Maldiverne, Sri Lanka, Bali, Gili Islands, Japan, Australien</span>
     </a>
 
     <a class="picture-card" href="/rejser/picture2" aria-label="Åbn billede 2">
          <span class="ophold-længde">90 dage</span>
-      <img src={`${import.meta.env.BASE_URL}images/beach-picturegrid.webp`} />
+      <img src={`${import.meta.env.BASE_URL}/images/beach-picturegrid.webp`} />
       <span class="picture-card__title">Brasilien, Colombia, Costa Rica, Mexico</span>
     </a>
 
     <a class="picture-card" href="/rejser/picture3" aria-label="Åbn billede 3">
         <span class="ophold-længde">90 dage</span>
-      <img src={`${import.meta.env.BASE_URL}images/beach2.webp`} />
+      <img src={`${import.meta.env.BASE_URL}/images/beach2.webp`} />
       <span class="picture-card__title">Australien, New Zealand, Vietnam, Bali, Gili Islands, Lombok</span>
     </a>
 
     <a class="picture-card" href="/rejser/picture4" aria-label="Åbn billede 4">
         <span class="ophold-længde">90 dage</span>
-      <img src={`${import.meta.env.BASE_URL}images/bus.webp`} />
+      <img src={`${import.meta.env.BASE_URL}/images/bus.webp`} />
       <span class="picture-card__title">Hawaii, Australien, Japan, Bali, Gili Islands</span>
     </a>
 
     <a class="picture-card" href="/rejser/picture5" aria-label="Åbn billede 5">
         <span class="ophold-længde">90 dage</span>
-      <img src={`${import.meta.env.BASE_URL}images/beach3.webp`} />
+      <img src={`${import.meta.env.BASE_URL}/images/beach3.webp`} />
       <span class="picture-card__title">Maldiverne, Sri Lanka, Bali, Gili Islands</span>
     </a>
   </div>
