--- a/src/components/Picturegrid.astro
+++ b/src/components/Picturegrid.astro
@@ -4,7 +4,7 @@
   <div class="picture-grid">
     <a class="picture-card" href="/rejser/picture1" aria-label="Åbn billede 1">
         <span class="ophold-længde">90 dage</span>
-      <img src="/images/torigate.webp" alt="billede 1" class="w-full h-auto" />
+      <img src="images/torigate.webp" alt="billede 1" class="w-full h-auto" />
       <span class="picture-card__title">Maldiverne, Sri Lanka, Bali, Gili Islands, Japan, Australien</span>
     </a>
 
