--- a/src/components/Picturegrid.astro
+++ b/src/components/Picturegrid.astro
@@ -10,25 +10,25 @@
 
     <a class="picture-card" href="/rejser/picture2" aria-label="Åbn billede 2">
          <span class="ophold-længde">90 dage</span>
-      <img src="/images/beach-picturegrid.webp" alt="billede 2" class="w-full h-auto" />
+      <img src="images/beach-picturegrid.webp" alt="billede 2" class="w-full h-auto" />
       <span class="picture-card__title">Brasilien, Colombia, Costa Rica, Mexico</span>
     </a>
 
     <a class="picture-card" href="/rejser/picture3" aria-label="Åbn billede 3">
         <span class="ophold-længde">90 dage</span>
-      <img src="/images/beach2.webp" alt="billede 3" class="w-full h-auto" />
+      <img src="images/beach2.webp" alt="billede 3" class="w-full h-auto" />
       <span class="picture-card__title">Australien, New Zealand, Vietnam, Bali, Gili Islands, Lombok</span>
     </a>
 
     <a class="picture-card" href="/rejser/picture4" aria-label="Åbn billede 4">
         <span class="ophold-længde">90 dage</span>
-      <img src="/images/bus.webp" alt="billede 4" class="w-full h-auto" />
+      <img src="images/bus.webp" alt="billede 4" class="w-full h-auto" />
       <span class="picture-card__title">Hawaii, Australien, Japan, Bali, Gili Islands</span>
     </a>
 
     <a class="picture-card" href="/rejser/picture5" aria-label="Åbn billede 5">
         <span class="ophold-længde">90 dage</span>
-      <img src="/images/beach3.webp" alt="billede 5" class="w-full h-auto" />
+      <img src="images/beach3.webp" alt="billede 5" class="w-full h-auto" />
       <span class="picture-card__title">Maldiverne, Sri Lanka, Bali, Gili Islands</span>
     </a>
   </div>
