--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,6 +6,7 @@
 
   --color-text-primary: white;
   --color-text-secondary: #000022;
+  --color-text-tertiary: #ce5501;
 
   --header-color-bg: #ebbb99;
 
