--- a/src/pages/trin1.astro
+++ b/src/pages/trin1.astro
@@ -1,7 +1,7 @@
 ---
-import Reserver from '..components/Reserver.astro';
-import Moeder from '..components/Moeder.astro';
-import Info from '..components/Info.astro';
+import Reserver from '../components/Reserver.astro';
+import Moeder from '../components/Moeder.astro';
+import Info from '../components/Info.astro';
 import Ophold from '../components/Ophold.astro';
 import Layout from '../layouts/Layout.astro';
 import Header from '../components/Header.astro';
@@ -11,7 +11,18 @@ import Footer from '../components/Footer.astro';
 ---
 
 <Layout>
-</Info>
+<Info
+title="Online infomøder"
+subtitle="Vi præsenterer vores eventyrlige højskole på et online møde og fortæller en masse om:"
+point="Hvem er vi"
+point1="Adventure, aktiviteter og oplevelser"
+point2="En “almindelig” dag på højskole i udlandet"
+point3="Den levende og aktive måde vi underviser på (glem kedelige klasseværelser)"
+point4="Økonomi, lommepenge, pakkeliste, friuger, afrejsemødet etc."
+titleunder="Vi runder af med en snak med tidligere elever, rejseledere og ejerne. Så giv den bare gas med spørgsmål!" 
+titleunder2="Vi glæder os til at se dig!"
+image="/hojskolendk/images/info.webp"
+yoga="/hojskolendk/images/yoga.webp">
 </Ophold>
 </Moeder>
 </Reserver>
