changed folder path

--- a/src/pages/trin1.astro
+++ b/src/pages/trin1.astro
@@ -21,8 +21,8 @@ point3="Den levende og aktive måde vi underviser på (glem kedelige klassevære
 point4="Økonomi, lommepenge, pakkeliste, friuger, afrejsemødet etc."
 titleunder="Vi runder af med en snak med tidligere elever, rejseledere og ejerne. Så giv den bare gas med spørgsmål!" 
 titleunder2="Vi glæder os til at se dig!"
-image="/hojskolendk/images/info.webp"
-yoga="/hojskolendk/images/yoga.webp">
+image="/images/info.webp"
+yoga="/images/yoga.webp">
 </Ophold>
 </Moeder>
 </Reserver>
