--- a/src/pages/trin1.astro
+++ b/src/pages/trin1.astro
@@ -23,7 +23,14 @@ titleunder="Vi runder af med en snak med tidligere elever, rejseledere og ejerne
 titleunder2="Vi glæder os til at se dig!"
 image="/images/info.webp"
 yoga="/images/yoga.webp">
-</Ophold>
-</Moeder>
+</Info>
+<Ophold></Ophold>
+<Moeder></Moeder>
+<Reserver 
+labeltext="Højskoleophold"
+title="Reservér en plads"
+subtitle="Gå ikke glip af en plads på det eventyr du drømmer om!"
+copy="Det er gratis og helt uforpligtende at reservere en plads på et højskoleophold. Det sikrer dig, at du får besked inden der er udsolgt på lige netop den tur, du vil med på.">
 </Reserver>
+
 </Layout> 
