--- a/src/components/Tak.astro
+++ b/src/components/Tak.astro
@@ -1,3 +1,24 @@
 ---
+import Reserver from '../components/Reserver.astro';
+import Info from '../components/Info.astro';
+import Ophold from '../components/Ophold.astro';
+import Layout from '../layouts/Layout.astro';
+import Header from '../components/Header.astro';
+import Nav from '../components/Nav.astro';
 import Button from '../components/Button.astro';
+import Footer from '../components/Footer.astro';
 ---
+
+<Info
+title="Online infomøder"
+subtitle="Vi præsenterer vores eventyrlige højskole på et online møde og fortæller en masse om:"
+point="Hvem er vi"
+point1="Adventure, aktiviteter og oplevelser"
+point2="En “almindelig” dag på højskole i udlandet"
+point3="Den levende og aktive måde vi underviser på (glem kedelige klasseværelser)"
+point4="Økonomi, lommepenge, pakkeliste, friuger, afrejsemødet etc."
+titleunder="Vi runder af med en snak med tidligere elever, rejseledere og ejerne. Så giv den bare gas med spørgsmål!" 
+titleunder2="Vi glæder os til at se dig!"
+image="/images/info.webp"
+yoga="/images/yoga.webp">
+</Info>
