--- a/src/pages/trin4.astro
+++ b/src/pages/trin4.astro
@@ -4,9 +4,12 @@ import Header from '../components/Header.astro';
 import Nav from '../components/Nav.astro';
 import Button from '../components/Button.astro';
 import Footer from '../components/Footer.astro';
+import Info from '../components/Info.astro';
+import Reserver from '../components/Reserver.astro';
+import Kontaktinfo from '../components/Kontaktinfo.astro';
+import Tak from '../components/Tak.astro';
 ---
 
 <Layout>
-   
-
+    <Tak />
 </Layout> 
